Fix drag-n-drop behavior.
We were overriding positioning of the draggable, which is not
recommended in the docs. This was causing an issue where the offset
between the mouse and draggable increased down the list, so dragging
around the end of the list would cause the draggables to go off-screen.
Removing the overrides makes the offset constant.

--- a/src/components/MenuDropdownItem/menu-dropdown-item.css
+++ b/src/components/MenuDropdownItem/menu-dropdown-item.css
@@ -23,6 +23,7 @@ text-overflow: ellipsis;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   margin-bottom: 0.25em;
   margin-top: 0.25em;
+  user-select: none;
 }
 
 .provider-card.saved {
